
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct bootp {int dummy; } ;
struct TYPE_3__ {int s_addr; } ;
struct TYPE_4__ {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;


 int AF_INET ;
 scalar_t__ MAX_MSG_SIZE ;
 int SERVER_PORT ;
 int SOCK_DGRAM ;
 int build_packet (struct bootp*,int,char**) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int get_args (int,char**) ;
 int host_addr ;
 int htons (int ) ;
 int inet_addr (int ) ;
 scalar_t__ malloc (scalar_t__) ;
 int memset (struct bootp*,int ,scalar_t__) ;
 int sendpacket (int,struct bootp*) ;
 TYPE_2__ server_addr ;
 int socket (int ,int ,int ) ;
 int stderr ;

int main(int argc, char *argv[])
{
    struct bootp* bp;
    int s;

    get_args(argc, argv);

    server_addr.sin_family = AF_INET;
    server_addr.sin_port = htons(SERVER_PORT);
    server_addr.sin_addr.s_addr = inet_addr(host_addr);


    if ((s = socket(AF_INET, SOCK_DGRAM, 0)) < 0) {
        fprintf(stderr, "cannot create socket\n");
        exit(1);
    }
    if ((bp = (struct bootp*) malloc(MAX_MSG_SIZE + 1000)) == ((void*)0)) {
        (void) fprintf(stderr, "Cannot malloc.\n");
        exit(1);
    };
    (void) memset(bp, 0, MAX_MSG_SIZE + 1000);
    build_packet(bp, argc, argv);

    sendpacket(s, bp);
}
